--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "description": "This package.json file is only used for installing npm dependencies. But this is not an installable node package, but a WireCloud operator. Take a look into src/config.xml for more details about this operator",
+  "description": "This package.json file is only used for installing npm dependencies. But this is not an installable node package, but a WireCloud widget. Take a look into src/config.xml for more details about this widget",
   "devDependencies": {
     "grunt": "^0.4.5",
     "mock-applicationmashup": "^0.1.3",
